apps/migration-helper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lucascajal-migration-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lucascajal.com
    http:
      paths:
      - pathType: Prefix
        path: /vanguardia
        backend:
          service:
            name: lucascajal-vanguardia-migration-service
            port:
              number: 80
      - pathType: Prefix
        path: /ara
        backend:
          service:
            name: lucascajal-ara-migration-service
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lucascajal-photography-migration-service
            port:
              number: 80
